--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -16,4 +16,8 @@
       <PackageReference Include="Microsoft.AspNetCore.SignalR.Core" Version="1.1.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Queries\Customer" />
+    </ItemGroup>
+
 </Project>
