--- a/Persistence/Persistence.csproj
+++ b/Persistence/Persistence.csproj
@@ -8,6 +8,8 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
+      <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.6" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.6" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Abstractions" Version="6.0.6" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Analyzers" Version="6.0.6" />
